#32 complete move of all C++ define / variable and function generation into specific class, making it easier to override behaviour.